# corrosionrobot

./: .gitignore  ArduinoMotorControl.ino  CMakeLists.txt  HWaddrs.txt  README.md  armature.urdf  package.xml
RobotControl/: RobotControl.ino
launch/: front_camera.launch  left_camera.launch  master.launch  rear_camera.launch  right_camera.launch
scripts/: distance_publisher.py  find_area_service.py  image_proc2.py  image_proc3.py  image_publisher.py  image_publisher_test.py  motorTest.py  motor_control.py  system_subscriber.py  system_subscriber_test.py  test_distance.py
scripts/ImageProc2/: README.md  imageProc2.py
src/: image_publisher.cpp  system_subscriber.cpp
srv/: AnomalyReport.srv  FindArea.srv  SetSonar.srv
test_scripts/: distance_client.py  distance_publisher.py  distance_server.py  find_area_service.py  image_publisher_test.py  length_computation.py  motor_control.py  system_subscriber_test.py
