<?xml version="1.0"?>
<package format="2">
  <name>corrosion_robot</name>
  <version>0.0.0</version>
  <description>The corrosion_robot package</description>
  <maintainer email="gmucorrosion@gmail.com">ACME</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/mdforbes500/corrosionrobot</url>
  <author email="mforbes4@gmu.edu">Malcolm D. Forbes</author>

  <!-- Buildtool Packages -->
  <!-- <<buildtool_depend>example_package</buildtool_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Compile/Runtime Dependencies -->
  <!--   <depend>example_package</depend> -->

  <!-- Packages to build against packages -->
  <!-- <build_export_depend>example_package</build_export_depend> -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>opencv3</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>cv_camera</build_export_depend>

  <!-- Build upon Compiling -->
  <!--   <build_depend>example_package</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cv_camera</build_depend>

  <!-- Build for Runtime -->
  <!--   <exec_depend>example_package</exec_depend> -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>opencv3</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cv_camera</exec_depend>

  <!-- Testing Packages -->
  <!--   <test_depend>example_package</test_depend> -->

  <!-- Documentation Packages -->
  <!--   <doc_depend>example_package</doc_depend> -->

    <export>
      <!-- Other tools can request additional information be placed here -->

    </export>
</package>
